<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickNavMenuActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>

    <Button
        android:id="@+id/btnBathrooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_btn_disabled_background"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/btn_bathrooms"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnStormShelters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_btn_disabled_background"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/btn_storm_shelters"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBathrooms"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnWaterFountains"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_btn_disabled_background"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/btn_water_fountains"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStormShelters"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_btn_disabled_background"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/btn_food"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWaterFountains"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEntertainment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/menu_btn_disabled_background"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/btn_entertainment"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFood"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>